--- a/rdmo_sensorsearch/config.toml
+++ b/rdmo_sensorsearch/config.toml
@@ -1,6 +1,69 @@
 [SensorsProvider]
 min_search_len = 3 
 
+[handlers.O2ARegistrySearchHandler]
+#[[handlers.O2ARegistrySearchHandler.backends]]
+#id_prefix = "o2aregistry"
+[[handlers.O2ARegistrySearchHandler.catalogs]]
+catalog_uri = "http://rdmo-dev.local/terms/questions/sensor-awi-test"
+auto_complete_field_uri = "http://rdmo-dev.local/terms/domain/sensor/awi/search"
+[handlers.O2ARegistrySearchHandler.catalogs.attribute_mapping]
+"longName" = "http://rdmo-dev.local/terms/domain/sensor/awi/type-name"
+"shortName" = "http://rdmo-dev.local/terms/domain/sensor/awi/name"
+"serialNumber" = "http://rdmo-dev.local/terms/domain/sensor/awi/serial"
+
+
+[handlers.SensorManagentSystemHandler]
+[[handlers.SensorManagentSystemHandler.backends]]
+id_prefix = "gfzsms" 
+base_url = "https://sensors.gfz-potsdam.de/backend/api/v1"
+[[handlers.SensorManagentSystemHandler.backends]]
+id_prefix = "kitsms"
+base_url = "https://sms.atmohub.kit.edu/backend/rdm/svm-api/v1"
+[[handlers.SensorManagentSystemHandler.backends]]
+id_prefix = "ufzsms"
+base_url = "https://web.app.ufz.de/sms/backend/api/v1"
+[[handlers.SensorManagentSystemHandler.catalogs]]
+catalog_uri = "http://rdmo-dev.local/terms/questions/sensor-awi-test"
+auto_complete_field_uri = "http://rdmo-dev.local/terms/domain/sensor/awi/search"
+[handlers.SensorManagentSystemHandler.catalogs.attribute_mapping]
+"data.attributes.long_name" = "http://rdmo-dev.local/terms/domain/sensor/awi/type-name"
+"data.attributes.short_name" = "http://rdmo-dev.local/terms/domain/sensor/awi/name"
+"data.attributes.serial_number" = "http://rdmo-dev.local/terms/domain/sensor/awi/serial"
+
+[handlers.GeophysicalInstrumentPoolPotsdamHandler]
+[[handlers.GeophysicalInstrumentPoolPotsdamHandler.catalogs]]
+catalog_uri = "http://rdmo-dev.local/terms/questions/sensor-awi-test"
+auto_complete_field_uri = "http://rdmo-dev.local/terms/domain/sensor/awi/search"
+[handlers.GeophysicalInstrumentPoolPotsdamHandler.catalogs.attribute_mapping]
+"Instrument.code" = "http://rdmo-dev.local/terms/domain/sensor/awi/type-name"
+"Instrumentcategory.name" = "http://rdmo-dev.local/terms/domain/sensor/awi/name"
+"Instrument.serialNo" = "http://rdmo-dev.local/terms/domain/sensor/awi/serial"
+
+#[[backends.O2ARegistrySearchHandler]]
+#id_prefix = o2aregistry
+#base_url = …
+
+#[[catalog_mappings.O2ARegistrySearchHandler]]
+#catalog_uri = "http://rdmo-dev.local/terms/questions/sensor-awi-test"
+#auto_complete_field_uri = "http://rdmo-dev.local/terms/domain/sensor/awi/search"
+#[catalog_mappings.O2ARegistrySearchHandler.attribute_mapping]
+#"$.longName" = "http://rdmo-dev.local/terms/domain/sensor/awi/type-name"
+#"$.shortName" = "http://rdmo-dev.local/terms/domain/sensor/awi/name"
+#"$.serialNumber" = "http://rdmo-dev.local/terms/domain/sensor/awi/serial"
+#
+#[[catalog_mappings.O2ARegistrySearchHandler]]
+#catalog_uri = "https://rdmo-sandbox.gfz-potsdam.de/terms/questions/moses"
+#auto_complete_field_uri = "http://rdmo.nfdi.de/terms/domain/dataset/instrument/uri"
+#[catalog_mappings.O2ARegistrySearchHandler.attribute_mapping]
+#"$.longName" = "http://rdmo.nfdi.de/terms/domain/dataset/instrument/name"
+#"$.type.generalName" = "http://rdmo.nfdi.de/terms/domain/dataset/instrument/type"
+#"$.manufacturer" = "http://rdmo.nfdi.de/terms/domain/dataset/instrument/manufacturer"
+#"$.model" = "http://rdmo.nfdi.de/terms/domain/dataset/instrument/type/name"
+#"$.serialNumber" = "http://rdmo.nfdi.de/terms/domain/dataset/instrument/type/serial_number"
+#"$.citation" = "http://rdmo.nfdi.de/terms/domain/dataset/instrument/type/pid"
+
+
 [[SensorsProvider.providers.O2ARegistrySearchProvider]]
 
 [[SensorsProvider.providers.SensorManagentSystemProvider]]
@@ -19,8 +82,8 @@ text_prefix = "UFZ Sensors:"
 base_url = "https://web.app.ufz.de/sms/backend/api/v1/devices"
 
 [[SensorsProvider.providers.GeophysicalInstrumentPoolPotsdamProvider]]
-
-[[SensorsProvider.providers.DoesNotExists]]
+#
+#[[SensorsProvider.providers.DoesNotExists]]
 
 #        results = O2ARegistrySearchProvider().get_options(project, search, user, site) + \
 #                SensorManagentSystemProvider(
