--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ readme = "README.md"
 requires-python = ">=3.8"
 license = {file = "LICENSE"}
 dependencies = [
+    "jmespath>=1.0.1",
     "requests>=2.31",
 	"tomli>=2.0.1;python_version<'3.11'"
 ]
